# cuda-kmer-counting

./: CMakeLists.txt  run-commands.sh  run.sh
include/Gerbil/: Gerbil.cuh
include/GpuHashtable/: GpuHashtable.cuh  OAGpuHashtable.cuh
include/SlabHash/: SlabHash.cuh  SlabPool.cuh
include/WarpCore/: WarpCore.cuh
include/benchmarks/: HashtableWalker.cuh  OccurenceArrayWalker.cuh  Stats.cuh
include/utils/: FailureZone.cuh  Fasta.cuh  JobQueue.cuh  utils.cuh
src/: gerbil.cu  info.cu  slab.cu  wc.cu
src/Fasta/: Fasta.cu  Fasta.cuh
src/Gerbil/: Gerbil.cu  Gerbil.cuh
src/GpuHashtable/: GpuHashtable.cu  GpuHashtable.cuh  OAGpuHashtable.cuh
src/SlabHash/: SlabHash.cu  SlabHash.cuh  SlabPool.cu  SlabPool.cuh
src/WarpCore/: WarpCore.cu  WarpCore.cuh
src/benchmarks/: HashtableWalker.cu  HashtableWalker.cuh  Stats.cu  Stats.cuh  slab.cu
src/utils/: Fasta.cu  JobQueue.cu  JobQueue.cuh  utils.cu  utils.cuh
tools/: cut.py
